--- a/styless.css
+++ b/styless.css
@@ -101,8 +101,8 @@ video {
 
 .modal {
     display: none;
-    /* Displey Block ( Bloco - Ele aparece na tela )
-       Displey none ( Desaparece, nada, sumiu)*/
+    /* Display Block ( Bloco - Ele aparece na tela )
+       Display none ( Desaparece, nada, sumiu)*/
     position: fixed;
     z-index: 5;
     left: 0;
